main/default/objects/Subjectivity_Template__c/Subjectivity_Template__c.object-meta.xml
<CustomObject>
    <label>Subjectivity Template</label>
    <nameField>
        <displayFormat>TEMP-{0000}</displayFormat>
        <label>Subjectivity Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subjectivity Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>