main/default/objects/Subjectivity_Template__c/fields/Applicable_Products__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Products__c</fullName>
    <label>Applicable Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPL</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Private Company Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>