main/default/objects/Subjectivity_Template__c/fields/Cleared__c.field-meta.xml
<CustomField>
    <fullName>Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleared</label>
    <type>Checkbox</type>
</CustomField>