main/default/objects/Subjectivity_Template__c/fields/Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Date__c</fullName>
    <label>Cleared Date</label>
    <type>Date</type>
</CustomField>