main/default/objects/Subjectivity_Template__c/fields/Default_Load__c.field-meta.xml
<CustomField>
    <fullName>Default_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Load</label>
    <type>Checkbox</type>
</CustomField>