main/default/objects/Subjectivity_Template__c/fields/New_Business__c.field-meta.xml
<CustomField>
    <fullName>New_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Business</label>
    <type>Checkbox</type>
</CustomField>