main/default/objects/Subjectivity_Template__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aqueous</fullName>
            </value>
            <value>
                <fullName>Celerity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>