main/default/objects/Subjectivity_Template__c/fields/Proposal_Form_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Form_Date__c</fullName>
    <label>Proposal Form Date</label>
    <type>Date</type>
</CustomField>