main/default/objects/Subjectivity_Template__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal</label>
    <type>Checkbox</type>
</CustomField>