main/default/objects/Subjectivity_Template__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Codes</valueSetName>
    </valueSet>
</CustomField>