main/default/objects/Subjectivity_Template__c/fields/Subjectivity_Name__c.field-meta.xml
<CustomField>
    <fullName>Subjectivity_Name__c</fullName>
    <label>Subjectivity Name</label>
    <type>TextArea</type>
</CustomField>