main/default/objects/Subjectivity_Template__c/fields/Subjectivity_Text__c.field-meta.xml
<CustomField>
    <fullName>Subjectivity_Text__c</fullName>
    <label>Subjectivity Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>