main/default/objects/Subjectivity_Template__c/recordTypes/Aqueous_Subjectivity_Template.recordType-meta.xml
<RecordType>
    <fullName>Aqueous_Subjectivity_Template</fullName>
    <active>true</active>
    <label>Aqueous Subjectivity Template</label>
</RecordType>