main/default/objects/Subjectivity_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subjectivity_Name__c</columns>
    <columns>Applicable_Products__c</columns>
    <columns>Layer__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Subjectivity_Template__c.Aqueous_Subjectivity_Template</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Celerity</value>
    </filters>
    <label>All</label>
</ListView>